style.css
.imgWrapper {
    background-image: url(./MEDIA/baptiste-buisson-W2nwTMiorTU-unsplash.jg);
    background-position: center;
    background-size: cover;
    width: 100vw;
    height: 100vh;
}

a {
    text-decoration: none;
}

a:link {
    color: inherit;
}

a:visited {
    color: inherit;
}

.hero {
    background-image: url(./MEDIA/pexels-diva-30413087.jpg);
    height: 10rem;
    background-position: center;
    background-size: cover;

}

.heroSlide2 {
    background-image: url(./MEDIA/pexels-diva-30413087.jp);
    height: 8rem;
    background-position: center;
    background-size: cover;
}

.hero p {
    font-family: "Bebas Neue", sans-serif;
    font-weight: 600;
    font-size: 2.5rem;
}

.cardMain {
    height: 10rem;
    width: 22%;
    background: rgba(255, 255, 255, 0.008);
    transition: background-color 2s;
    animation: backInDown;
    /* animation-delay: 4s; */
    animation-duration: 5s;
}

.cardMain a {
    padding-left: 8%;
    padding-right: 8%;
}

.cardMain:hover {
    background-color: rgba(240, 248, 255, 0.33);
}

.carousel-item {
    flex-shrink: 0;
    width: 100%;
    flex-wrap: nowrap;
}

.icon {
    font-size: 3rem;
}


.modal-content {
    background-color: rgba(0, 0, 0, 0.866);
    color: white;
}



.carouselTwoItem {
    height: 15rem;
    background-color: rgba(211, 211, 211, 0.093);
    padding: 2rem;
    animation: backInLef 2s;
    transition: background-color 3s;
}

.carouselTwoItem:hover {
    background-color: rgba(8, 0, 0, 0.859);
}

.carouselTwoItem img {
    height: 10rem;
    
    border-radius: 1rem;
    border: 1px grey;
}

.skills i {
    font-size: 4rem;
}

